# OS_course

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
Lab_02/: main.sh  main.tex
Lab_02/code/: base_command  base_command.sh  cmplist  cmplist2  copy3  create_vars.sh  menu  print3  pull_all  task_menu  task_print  who_ip
Lab_02/data/: settings.tex  title.tex
Lab_02/exec/: 10_interactive.sh  11_pull_all.sh  11_who_ip.sh  12_menu.sh  12_print.sh  2_var_list.sh  3_base_command.sh  4_cmplist.sh  4_copy3.sh  4_menu.sh  4_print3.sh  5_print4.sh  6_cmplist2.sh  7_system.sh  8_profile.sh
Lab_03/: exec.sh  main.c  main.sh  main.tex
Lab_03/data/: settings.tex  title.tex
Lab_04/: build.sh  center_filter.c  client.c  hex_filter.c  input.txt  main.sh  main.tex  server.c  server.h  task1.c  task1.sh  task2.c  task2.sh  task3.sh
Lab_04/data/: settings.tex  title.tex
Lab_05/: build.sh  child.c  client.c  client.sh  header.h  main.sh  main.tex  parent.c  server.c  server.sh
Lab_05/data/: title.tex
